# LLM-QAuto

./: .env.example  .gitignore  QUICKSTART.md  README.md  package-lock.json  pyproject.toml  requirements.txt  tunnel.ps1  web_server.py
.cursor/skills/: README.md
.cursor/skills/mock-data/: SKILL.md
.cursor/skills/openapi-contract/: SKILL.md
.cursor/skills/perf-k6/: SKILL.md
.cursor/skills/platform-modules/: SKILL.md
.cursor/skills/qauto-from-curl/: SKILL.md  templates.md
.cursor/skills/test-case-design/: SKILL.md
.cursor/skills/ui-playwright/: SKILL.md
.github/workflows/: ui-automation.yml
examples/: de_copyinfo_regenerate_listing_qc_rubric_batch.yaml  prompt_rewrite_qc_batch.yaml
plans/: ui-enhancement-plan.md
scripts/: stop_server.ps1
src/llm_qauto/: __init__.py  cli.py  config_loader.py  engine.py  llm_client.py  media.py  models.py  statistics.py
src/llm_qauto/platform/: __init__.py  case_service.py  mermaid_normalize.py  modules.yaml  playwright_runner.py  registry.py  workbench_service.py
src/llm_qauto/plugins/: __init__.py  (+3 more)
ui_tests/: package-lock.json  package.json  playwright.config.ts
ui_tests/scripts/: probe_page.mjs
ui_tests/specs/: .gitkeep  dev-table.spec.ts
web_results/run_20260630_170642_image-gen-qc-batch_20260630_163123/: report.html  report.json
web_results/run_20260703_112252_example_de_copyinfo_regenerate_listing_qc_rubric_batch/: report.html  report.json
web_uploads/: example_de_copyinfo_regenerate_listing_qc_rubric_batch.yaml  example_prompt_rewrite_qc_batch.yaml  image-gen-qc-batch_20260630_163123.yaml
(+30 files in other folders)
