[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-qauto"
version = "1.0.0"
description = "通用AI智能体测试平台 - Universal AI Testing Platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "QA Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.8.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "tenacity>=8.2.0",
    "tabulate>=0.9.0",
]

[project.scripts]
qauto = "llm_qauto.cli:main"

[project.urls]
Homepage = "https://github.com/example/llm-qauto"
